--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,12 @@
-
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--space-200);
+  min-height: 90vh;
+}
