--- a/src/components/UI/Card.css
+++ b/src/components/UI/Card.css
@@ -2,11 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width:29vw;
+  flex: 1;
   background-color: var(--light-blue-100);
   border-radius: 4px;
   box-shadow: var(--box-shadow-card);
   padding: var(--space-100);
-  margin-bottom: var(--space-100);
 }
