fix errors for selecting place on map.Add loading.

--- a/src/components/PlacesList/PlacesList.css
+++ b/src/components/PlacesList/PlacesList.css
@@ -46,4 +46,10 @@
   background-color: var(--light-blue-200);
   border-bottom: 2px solid #b3bece;
 }
+.loading{
+  height: 600px;
+  display:flex;
+ align-items: center;
+ justify-content: center;
+}
 
