--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -4,6 +4,9 @@
   height: calc(90vh - 4rem);
 }
 .map-marker {
+  position: absolute;
+   transform: translate(-50%, -50%);
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,6 +15,9 @@
   border-radius: 4px;
   box-shadow: var(--box-shadow-card);
   padding: 0.6rem 1.3rem;
+}
+.map-marker:hover {
+  z-index: 2;
 }
 .map-marker span {
   font-size: var(--font-size);
@@ -23,5 +29,6 @@
   margin: 0.5rem 0;
   width: 8rem;
   height: auto;
+  cursor: pointer;
 }
 
