--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --deep-blue-200: #102750;
   --deep-blue-300: #071225;
   --gold: #fdbf49;
-  --gray:#6c7a92;
+  --gray: #6c7a92;
 
   /* font variables  */
   --font-size: 1rem;
@@ -73,16 +73,115 @@ p {
   letter-spacing: 0.2px;
 }
 h3 {
-  color:var(--deep-blue-200);
+  color: var(--deep-blue-200);
   font-size: var(--font-size-200);
 }
 
 h6 {
-  color:var(--gray);
+  color: var(--gray);
   font-size: var(--font-size);
   font-style: italic;
   font-weight: 500;
-  
 }
 
+/* media queries  */
 
+@media (max-width: 1201px) {
+  .content {
+    flex-wrap: wrap !important;
+  }
+  .map-container {
+    flex-basis: auto !important;
+  }
+  .placesList {
+    flex-basis: auto !important;
+    margin-left: 0 !important;
+    width: calc(100vw - 4rem) !important;
+    border-left: 0 !important;
+    margin-top: var(--space-400) !important;
+    justify-self: flex-start !important;
+  }
+  .card {
+    width: calc(100vw - 10rem) !important;
+    justify-self: flex-start !important;
+    padding: 2rem !important;
+    margin-right: 2rem !important;
+  }
+  .header__search {
+    padding: 0 !important;
+    width: 100% !important;
+    margin: 0 !important;
+  }
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  .container {
+    min-height: auto !important;
+  }
+  .content {
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+    min-height: auto !important;
+    padding: 2rem 1rem !important;
+  }
+  .category-buttons {
+    flex-direction: row !important;
+    width: calc(100vw - 2rem) !important;
+    height: auto !important;
+    align-content: center !important;
+    justify-content: center !important;
+    padding: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  .category-buttons button {
+    margin: 0 !important;
+  }
+  .category-buttons button:not(:last-of-type) {
+    margin-right: var(--space-200)!important;
+  }
+  .icon {
+    margin-bottom: var(--space-100) !important;
+  }
+
+  .map-container {
+    max-height: 300px !important;
+    margin: 2rem 0 !important;
+    justify-self: center !important;
+  }
+
+  .placeList {
+    margin: 0 !important;
+  }
+
+  .placeList,
+  .map-container {
+    width: calc(100vw - 4rem) !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    display: flex !important;
+    flex-direction: column !important;
+    height: auto !important;
+    background: var(--deep-blue-200) !important;
+  }
+  .header__title {
+    padding: 0 0 var(--space-200) 0 !important;
+    border-right: none !important;
+    font-size: var(--font-size-400) !important;
+  }
+  .header__search-input {
+    width: 100% !important;
+    margin-right: 2rem !important;
+  }
+  .placeList {
+    flex: 0 0 100% !important;
+    justify-content: center !important;
+    overflow-y: hidden !important;
+  }
+}
